<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".CalculatedAgeActivity">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_age_text"
        android:textAlignment="center"
        android:layout_margin="50dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/secondsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/calc_seconds"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/daysTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/calc_days"
        android:textAlignment="center"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/weeksTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/calc_weeks"
        android:textAlignment="center"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/monthsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/calc_months"
        android:textAlignment="center"
        android:textStyle="italic" />

</LinearLayout>